fixed position mobile buttons

--- a/ctnet/css/can.css
+++ b/ctnet/css/can.css
@@ -128,7 +128,7 @@ ins {
 
 #resize_btn, #mobile_menu_btn {
     cursor: pointer;
-    position: absolute;
+    position: fixed;
     top: 5px;
     z-index: 10;
 }
